--- a/learn-skill/hello-fastapi/pyproject.toml
+++ b/learn-skill/hello-fastapi/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
+    "pytest>=9.0.2",
     "uvicorn[standard]>=0.40.0",
 ]
 
